doc:install-doc.
	* Makefile.am, doc/Makefile.am (install-doc): New.

--- a/Makefile.am
+++ b/Makefile.am
@@ -61,6 +61,9 @@ libs:
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src libs
 	$(MAKE) $(AM_MAKEFLAGS) -C src libuobject.la
 
+install-doc:
+	$(MAKE) $(AM_MAKEFLAGS) -C doc $@
+
 
 ## ------- ##
 ## Check.  ##
