install-doc: also install the HTML version.
	* doc/Makefile.am (html_files): New.
	(install-doc): Use it.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -64,8 +64,17 @@ view: $(pdf_DATA)
 ## document-aux.  ##
 ## -------------- ##
 .PHONY: install-doc
-install-doc: $(pdf_DATA)
-	scp $(pdf_DATA) downloads@www.gostai.com:urbi-sdk-2.0/doc
+html_files = 					\
+  urbi-sdk.css					\
+  urbi-sdk.html					\
+  urbi-sdk0x.png				\
+  urbi-sdk1x.png				\
+  urbi-sdk2.html				\
+  urbi-sdk3.html				\
+  urbi-sdk4.html				\
+  urbi-sdk5.html
+install-doc: $(pdf_DATA) $(html_files)
+	scp $(pdf_DATA) $(html_files) downloads@www.gostai.com:urbi-sdk-2.0/doc
 
 ## -------------- ##
 ## document-aux.  ##
