--- a/scripts/package.in
+++ b/scripts/package.in
@@ -86,7 +86,7 @@ MANIFEST="$TMPDIR/MANIFEST.tmp.$$"
 $MV "$MANIFEST" "$packagedir/MANIFEST"
 
 # Copy the instructions at the top-level
-for i in doc/{QUICK-START,LICENSE,README,RELEASE-NOTES,REPORTING-BUGS}.txt
+for i in doc/{LICENSE,README,RELEASE-NOTES,REPORTING-BUGS}.txt
 do
   $CP "$srcdir/$i" "$packagedir/$i"
   case $OS in
