Add Urbi TCP socket and server.
	* src/object/socket.cc,
	* src/object/socket.hh: New, Urbi TCP socket.
	* src/object/server.cc,
	* src/object/server.hh: New, Urbi TCP server.
	* src/object/local.mk,
	* src/Makefile.am: Build them.
	* configure.ac: Use boost system.

--- a/configure.ac
+++ b/configure.ac
@@ -104,6 +104,7 @@ URBI_ARG_ENABLE([enable-programs],
 AM_CONDITIONAL([BUILD_PROGRAMS],
                [test x$enable_programs = xyes])
 BOOST_TOKENIZER
+BOOST_SYSTEM
 
 
 ## -------------- ##
