sdk: address --version issues.
https://core.gostai.com/projects/kernel/ticket/361

The '$(VERSION)' issue is more tricky and requires more thinking.  But I
venture that we don't have the problem in shipped files.

	* sdk/uinstall.in, sdk/umake-link.in, sdk/umake.in: Don't use
	Subversion keywords.
	Use PACKAGE_COPYRIGHT.

--- a/sdk-remote/sdk/uinstall.in
+++ b/sdk-remote/sdk/uinstall.in
@@ -17,8 +17,8 @@ EOF
 version ()
 {
   cat <<\EOF
-URBI Make @PACKAGE_VERSION@
-$Id$
+uinstall @PACKAGE_VERSION@ (@PACKAGE_STRING@)
+@PACKAGE_COPYRIGHT@
 EOF
   exit 0
 }
