--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -11,7 +11,7 @@ AC_PREREQ([2.61])
 AC_INIT([Urbi SDK Remote], [UNDEFINED],
 	[sdk-remote-bugs@gostai.com], [sdk-remote])
 URBI_PACKAGE_VERSION
-URBI_PACKAGE_COPYRIGHT([Gostai SAS], [2004-2009])
+URBI_PACKAGE_COPYRIGHT([Gostai S.A.S.], [2004-2009])
 URBI_DISTCHECK_CONFIGURE_FLAGS
 
 # Auxiliary files.
