--- a/sdk-remote/sdk/umake-link.in
+++ b/sdk-remote/sdk/umake-link.in
@@ -22,6 +22,8 @@ Specific options:
   -L, --libtool=PATH    path to libtool
   -E, --env=URBI-ENV    urbi environment name (e.g., engine, aibo)
   -H, --host=URBI-HOST  urbi host name        (e.g.. mipsel-linux)
+
+Report bugs to @PACKAGE_BUGREPORT@.
 EOF
 
   exit 0
