--- a/sdk-remote/sdk/umake.in
+++ b/sdk-remote/sdk/umake.in
@@ -35,7 +35,9 @@ Exit codes:
    4   unable to find file or directory
 
 FILE may be C/C++ source files, headers, libraries or directory that
-will be searched for such files
+will be searched for such files.
+
+Report bugs to @PACKAGE_BUGREPORT@.
 EOF
 
   exit 0
