urbi.bat: unix2dos.
	* scripts/package.in: here.
	Suggested by Nicolas Desprès.

--- a/scripts/package.in
+++ b/scripts/package.in
@@ -109,5 +109,5 @@ fi
 
 # On Windows, copy the .bat file
 case $OS in
-  (windows) $CP "$builddir/scripts/urbi.bat" "$packagedir";;
+  (windows) unix2dos "$builddir/scripts/urbi.bat" "$packagedir";;
 esac
