space: slice the scanner
	* Makefile.am: Ship studentize.
	* src/Makefile.am (PRUNE_FOR_SPACE): New.
	* src/parser/local.mk: Use it to prune deprecated constructs from
	the scanner.
	* src/parser/utoken.l: Mark code to remove on no-space.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,8 @@ EXTRA_DIST +=					\
   build-aux/flex++.in				\
   build-aux/fuse-switch				\
   build-aux/move-if-change			\
-  build-aux/output-to-dot
+  build-aux/output-to-dot			\
+  build-aux/studentize
 
 # dev.
 devdir = dev/
