--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,14 @@ include $(top_srcdir)/build-aux/init.mk
 include $(top_srcdir)/build-aux/fix-libtool-la.mk
 include $(top_srcdir)/build-aux/libport.mk
 
+# A tool that cuts code we don't want to keep in space-optimized
+# versions (when cpp cannot be used).
+PRUNE_FOR_SPACE = $(build_aux_dir)/studentize --mark=no-space
+if !OPTIMIZE_SPACE
+  PRUNE_FOR_SPACE += --stage=no-space
+endif
+
+
 ## Find the kernel private headers.  location.hh etc. are generated.
 AM_CPPFLAGS += -I$(srcdir) -I.
 
