Add a --disable-sdk-remote option.
Useful mainly for arm-gcc3 build, on which usyncclient.cc fails to compile.

	* configure.ac: New --disable-sdk-remote option.
	* src/Makefile.am: Disable building of liburbi, urbi-launch and
	uobjects if set.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -36,9 +36,12 @@ AM_LDADD =					\
   $(LIBPORT_LIBS)
 
 include libuco/local.mk
-include liburbi/local.mk
 include libuobject/local.mk
+
+if SDK_REMOTE
+include liburbi/local.mk
 include uobjects/local.mk
+endif SDK_REMOTE
 
 if EXAMPLES
 include examples/local.mk
@@ -58,6 +61,7 @@ core: libs urbi-launch$(EXEEXT)
 ## Urbi-launch.  ##
 ## ------------- ##
 
+if SDK_REMOTE
 bin_PROGRAMS += urbi-launch
 # Find our own ltdl.h.  Push "system" headers last so that our headers
 # have priority.
@@ -69,3 +73,4 @@ urbi_launch_LDADD =				\
   $(AM_LDADD)					\
   $(LTDL_LIBS)					\
   liburbi/liburbi.la
+endif
