build: complete the migration to COMPILATION_MODE_*.
	* sdk-remote: Update.
	* dev/ast-nodes-gen, src/Makefile.am, src/object/local.mk,
	* src/parser/is-keyword.cc, src/parser/is-keyword.hh,
	* src/runner/interpreter.cc, src/runner/runner.cc,
	* src/runner/runner.hh: Adjust.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@ include $(top_srcdir)/build-aux/libport.mk
 # A tool that cuts code we don't want to keep in space-optimized
 # versions (when cpp cannot be used).
 PRUNE_FOR_SPACE = $(build_aux_dir)/studentize --mark=no-space
-if !OPTIMIZE_SPACE
+if !COMPILATION_MODE_SPACE
   PRUNE_FOR_SPACE += --stage=no-space
 endif
 
