build: provide compilation mode info to Urbi world.
	* share/urbi/platform.u.in: here.

--- a/share/urbi/platform.u.in
+++ b/share/urbi/platform.u.in
@@ -19,5 +19,8 @@ class System.Platform
     else
       "POSIX";
   };
-};
 
+  var compilation_mode_debug = @COMPILATION_MODE_DEBUG@;
+  var compilation_mode_space = @COMPILATION_MODE_SPACE@;
+  var compilation_mode_speed = @COMPILATION_MODE_SPEED@;
+};
