Make the ast serializable.
	* dev/ast-fwd-gen,
	* dev/ast-nodes-gen: Here.
	* src/ast/serialize.cc,
	* src/ast/serialize.hh: New: export ast serialization in the API.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -247,11 +247,13 @@ Ast:
         type: loc
         access: rW
         desc: Scanner position information
+        serialize: false
     - original:
         type: rConstAst
         access: r
         desc: Original node, if this is a rewrite
         init: "0"
+        serialize: false
 
 Exp:
   super:
