Kill useless 'Tag' AST node.
	* src/ast/ast.yml: Remove it, adapt.
	* src/parser/ugrammar.y,
	* src/runner/interpreter-visit.hxx: Adapt.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -279,17 +279,10 @@ MetaExp:
 ## Tags.  ##
 ## ------ ##
 
-Tag:
-  super: Exp
-  attributes:
-    - exp: { type: 'rExp', desc: The tagging expression }
-  printer:
-    - ~exp
-
 TaggedStmt:
   super: Exp
   attributes:
-    - tag: { type: 'rTag', desc: The tagging expression }
+    - tag: { type: 'rExp', desc: The tagging expression }
     - exp: { type: 'rExp', desc: The tagged expression }
   printer:
     - ~tag
