parser: avoid useless naries.
	* src/parser/ugrammar.y (block): Produce an rExp, not an rNary.
	Use ast_strip to simplify the block.
	* src/ast/ast.yml (Class.content, Catch.body): From rNary to rExp.
	* src/rewrite/desugarer.cc (visit(Try)): The bodies of the
	"catch"es can have declarations.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1218,7 +1218,7 @@ Class:
         mandatory: false
         desc: Prototypes
     - content:
-        type: rNary
+        type: rExp
         desc: Class content
   printer:
     - '"class "'
@@ -1298,7 +1298,7 @@ Catch:
         type: rMatch
         mandatory: False
     - body:
-        type: rNary
+        type: rExp
         desc: The handler to execute if we have a match
   printer:
     - '"catch"'
