build: more ignore files.
	* dev/ast-ignores-gen: Also ignore ~ files.
	* src/ast/.gitignore: Regen.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -1,215 +1,430 @@
 all.hh
+all.hh~
 all.stamp
+all.stamp~
 and.cc
+and.cc~
 and.hh
+and.hh~
 and.hxx
+and.hxx~
 assign.cc
+assign.cc~
 assign.hh
+assign.hh~
 assign.hxx
+assign.hxx~
 assignment.cc
+assignment.cc~
 assignment.hh
+assignment.hh~
 assignment.hxx
+assignment.hxx~
 ast-fwd-gen.stamp
+ast-fwd-gen.stamp~
 ast-nodes-gen.stamp
+ast-nodes-gen.stamp~
 ast-nodes.mk
+ast-nodes.mk~
 ast-print-visitor-gen.stamp
+ast-print-visitor-gen.stamp~
 ast-visitor-gen.stamp
+ast-visitor-gen.stamp~
 ast.cc
+ast.cc~
 ast.dot
+ast.dot~
 ast.hh
+ast.hh~
 ast.hxx
+ast.hxx~
 binding.cc
+binding.cc~
 binding.hh
+binding.hh~
 binding.hxx
+binding.hxx~
 break.cc
+break.cc~
 break.hh
+break.hh~
 break.hxx
+break.hxx~
 call-msg.cc
+call-msg.cc~
 call-msg.hh
+call-msg.hh~
 call-msg.hxx
+call-msg.hxx~
 call.cc
+call.cc~
 call.hh
+call.hh~
 call.hxx
+call.hxx~
 catch.cc
+catch.cc~
 catch.hh
+catch.hh~
 catch.hxx
+catch.hxx~
 class.cc
+class.cc~
 class.hh
+class.hh~
 class.hxx
+class.hxx~
 cloner.cc
+cloner.cc~
 cloner.hh
+cloner.hh~
 cloner.stamp
+cloner.stamp~
 closure.cc
+closure.cc~
 closure.hh
+closure.hh~
 closure.hxx
+closure.hxx~
 composite.cc
+composite.cc~
 composite.hh
+composite.hh~
 composite.hxx
+composite.hxx~
 continue.cc
+continue.cc~
 continue.hh
+continue.hh~
 continue.hxx
+continue.hxx~
 declaration.cc
+declaration.cc~
 declaration.hh
+declaration.hh~
 declaration.hxx
+declaration.hxx~
 decrementation.cc
+decrementation.cc~
 decrementation.hh
+decrementation.hh~
 decrementation.hxx
+decrementation.hxx~
 default-visitor.hh
+default-visitor.hh~
 default-visitor.hxx
+default-visitor.hxx~
 default-visitor.stamp
+default-visitor.stamp~
 dictionary.cc
+dictionary.cc~
 dictionary.hh
+dictionary.hh~
 dictionary.hxx
+dictionary.hxx~
 do.cc
+do.cc~
 do.hh
+do.hh~
 do.hxx
+do.hxx~
 dot-printer.cc
+dot-printer.cc~
 dot-printer.hh
+dot-printer.hh~
 dot-printer.stamp
+dot-printer.stamp~
 emit.cc
+emit.cc~
 emit.hh
+emit.hh~
 emit.hxx
+emit.hxx~
 exp.cc
+exp.cc~
 exp.hh
+exp.hh~
 exp.hxx
+exp.hxx~
 flavored.cc
+flavored.cc~
 flavored.hh
+flavored.hh~
 flavored.hxx
+flavored.hxx~
 float.cc
+float.cc~
 float.hh
+float.hh~
 float.hxx
+float.hxx~
 foreach.cc
+foreach.cc~
 foreach.hh
+foreach.hh~
 foreach.hxx
+foreach.hxx~
 function.cc
+function.cc~
 function.hh
+function.hh~
 function.hxx
+function.hxx~
 fwd.hh
+fwd.hh~
 fwd.stamp
+fwd.stamp~
 graph.stamp
+graph.stamp~
 if.cc
+if.cc~
 if.hh
+if.hh~
 if.hxx
+if.hxx~
 ignores
+ignores~
 ignores.stamp
+ignores.stamp~
 implicit.cc
+implicit.cc~
 implicit.hh
+implicit.hh~
 implicit.hxx
+implicit.hxx~
 incrementation.cc
+incrementation.cc~
 incrementation.hh
+incrementation.hh~
 incrementation.hxx
+incrementation.hxx~
 lazy.cc
+lazy.cc~
 lazy.hh
+lazy.hh~
 lazy.hxx
+lazy.hxx~
 list.cc
+list.cc~
 list.hh
+list.hh~
 list.hxx
+list.hxx~
 local-assignment.cc
+local-assignment.cc~
 local-assignment.hh
+local-assignment.hh~
 local-assignment.hxx
+local-assignment.hxx~
 local-declaration.cc
+local-declaration.cc~
 local-declaration.hh
+local-declaration.hh~
 local-declaration.hxx
+local-declaration.hxx~
 local-write.cc
+local-write.cc~
 local-write.hh
+local-write.hh~
 local-write.hxx
+local-write.hxx~
 local.cc
+local.cc~
 local.hh
+local.hh~
 local.hxx
+local.hxx~
 lvalue-args.cc
+lvalue-args.cc~
 lvalue-args.hh
+lvalue-args.hh~
 lvalue-args.hxx
+lvalue-args.hxx~
 lvalue.cc
+lvalue.cc~
 lvalue.hh
+lvalue.hh~
 lvalue.hxx
+lvalue.hxx~
 match.cc
+match.cc~
 match.hh
+match.hh~
 match.hxx
+match.hxx~
 message.cc
+message.cc~
 message.hh
+message.hh~
 message.hxx
+message.hxx~
 meta-args.cc
+meta-args.cc~
 meta-args.hh
+meta-args.hh~
 meta-args.hxx
+meta-args.hxx~
 meta-call.cc
+meta-call.cc~
 meta-call.hh
+meta-call.hh~
 meta-call.hxx
+meta-call.hxx~
 meta-exp.cc
+meta-exp.cc~
 meta-exp.hh
+meta-exp.hh~
 meta-exp.hxx
+meta-exp.hxx~
 meta-id.cc
+meta-id.cc~
 meta-id.hh
+meta-id.hh~
 meta-id.hxx
+meta-id.hxx~
 meta-lvalue.cc
+meta-lvalue.cc~
 meta-lvalue.hh
+meta-lvalue.hh~
 meta-lvalue.hxx
+meta-lvalue.hxx~
 nary.cc
+nary.cc~
 nary.hh
+nary.hh~
 nary.hxx
+nary.hxx~
 nodes-mk.stamp
+nodes-mk.stamp~
 nodes.stamp
+nodes.stamp~
 noop.cc
+noop.cc~
 noop.hh
+noop.hh~
 noop.hxx
+noop.hxx~
 op-assignment.cc
+op-assignment.cc~
 op-assignment.hh
+op-assignment.hh~
 op-assignment.hxx
+op-assignment.hxx~
 pipe.cc
+pipe.cc~
 pipe.hh
+pipe.hh~
 pipe.hxx
+pipe.hxx~
 pretty-printer.cc
+pretty-printer.cc~
 pretty-printer.hh
+pretty-printer.hh~
 pretty-printer.stamp
+pretty-printer.stamp~
 property-action.cc
+property-action.cc~
 property-action.hh
+property-action.hh~
 property-action.hxx
+property-action.hxx~
 property-write.cc
+property-write.cc~
 property-write.hh
+property-write.hh~
 property-write.hxx
+property-write.hxx~
 property.cc
+property.cc~
 property.hh
+property.hh~
 property.hxx
+property.hxx~
 return.cc
+return.cc~
 return.hh
+return.hh~
 return.hxx
+return.hxx~
 routine.cc
+routine.cc~
 routine.hh
+routine.hh~
 routine.hxx
+routine.hxx~
 scope.cc
+scope.cc~
 scope.hh
+scope.hh~
 scope.hxx
+scope.hxx~
 stmt.cc
+stmt.cc~
 stmt.hh
+stmt.hh~
 stmt.hxx
+stmt.hxx~
 string.cc
+string.cc~
 string.hh
+string.hh~
 string.hxx
+string.hxx~
 subscript.cc
+subscript.cc~
 subscript.hh
+subscript.hh~
 subscript.hxx
+subscript.hxx~
 tagged-stmt.cc
+tagged-stmt.cc~
 tagged-stmt.hh
+tagged-stmt.hh~
 tagged-stmt.hxx
+tagged-stmt.hxx~
 this.cc
+this.cc~
 this.hh
+this.hh~
 this.hxx
+this.hxx~
 throw.cc
+throw.cc~
 throw.hh
+throw.hh~
 throw.hxx
+throw.hxx~
 try.cc
+try.cc~
 try.hh
+try.hh~
 try.hxx
+try.hxx~
 unary.cc
+unary.cc~
 unary.hh
+unary.hh~
 unary.hxx
+unary.hxx~
 unscope.cc
+unscope.cc~
 unscope.hh
+unscope.hh~
 unscope.hxx
+unscope.hxx~
 visitor.hh
+visitor.hh~
 visitor.stamp
+visitor.stamp~
 while.cc
+while.cc~
 while.hh
+while.hh~
 while.hxx
+while.hxx~
 write.cc
+write.cc~
 write.hh
+write.hh~
 write.hxx
+write.hxx~
