--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -442,9 +442,9 @@ Nary:
 
     impl inside: |2
         Nary::Nary()
-          : Exp(loc()),
-            children_(new exps_type()),
-            toplevel_(false)
+          : Exp(loc())
+          , children_(new exps_type())
+          , toplevel_(false)
         {}
 
         void
