Make building of serialization-related code optional.
	* configure.ac: --enable-serialization, setting ENABLE_SERIALIZATION,
	defaults to yes.
	* dev/ast-nodes-gen: #ifdef serialization-related code.
	* src/ast/local.mk: Remove serialize.cc/hh if ! ENABLE_SERIALIZATION.
	* src/bin/local.mk: Build serialization-related tools conditionaly.
	* src/object/system.cc(load): Conditionaly check for .uc file.

--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,14 @@ URBI_ARG_ENABLE([enable-headers-install],
 AM_CONDITIONAL([INSTALL_KERNEL_HEADERS],
                [test x$enable_headers_install = xyes])
 
+URBI_ARG_ENABLE([enable-serialization],
+                [Build with support for serialization], [yes|no], [yes])
+AM_CONDITIONAL([ENABLE_SERIALIZATION],
+               [test x$enable_serialization = xyes])
+if test x$enable_serialization = xyes; then
+  AC_DEFINE([ENABLE_SERIALIZATION], [1], [Define to 1 if serialization is enabled.])
+fi
+
 # Where we look for the installed files.
 # Do not use $package here, kernel is a too generic name.
 pkgdatadir=${datadir}/gostai
